# SOIL2

./: .gitignore  .hgignore  .hgtags  CMakeLists.txt  LICENSE  README.md  premake4.lua  premake5.lua
.agents/plans/: dds-hdr-roadmap.md
.ecode/: project_build.json
.github/workflows/: main.yml
cmake/: soil2-config.cmake.in  soil2Config.cmake.in
src/SOIL2/: SOIL2.c  SOIL2.h  etc1_utils.c  image_DXT.c  image_DXT.h  image_array.c  image_array.h  image_helper.c  image_helper.h  jo_jpeg.h  pkm_helper.h  pvr_helper.h  stb_image.c  stb_image.h  stb_image_write.c  stb_image_write.h  stbi_DDS.h  stbi_DDS_c.h  stbi_ext.h  stbi_ext_c.h  stbi_pkm.h  stbi_pkm_c.h  stbi_pvr.h  stbi_pvr_c.h  wfETC.c  wfETC.h
src/common/: common.cpp
src/perf_test/: test_perf_SOIL2.cpp
src/test/: generate_DDS_fixtures.cpp  generate_mobile_compressed_fixtures.cpp  test_DDS.cpp  test_Grid.cpp  test_HDR.cpp  test_MobileCompressed.cpp  test_SOIL2.cpp
